Early day push Before laptop dies

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -10,8 +10,12 @@ $colors: (
 
 
 * {
-    font-family: 'Avenir Next';
-    font-size: 16px;
+    font-family: 'Avenir';
+    
+}
+
+body {
+    margin: 0px;
 }
 
 .navsection {
@@ -19,11 +23,12 @@ $colors: (
     color: map-get($colors, cta__text--active );
 }
 
+
 @media screen and (max-width: 767px){ /*767px*/
     .navsection__title {
         margin: auto;
-        width: 50%;
-        padding: 0.625rem; /*10px*/
+        width: 100%;
+        padding: 0.5rem; /*8px*/
         text-align: center;
     }
     
@@ -46,6 +51,13 @@ $colors: (
         line-height: 2rem;
         font-weight: 700;
     }
+
+    h1 {
+        margin: 0%;
+        margin-top: 0%;
+        margin-inline-start: 0%;
+    }
+
     h3 {/*subheader*/
         font-size: 0.875rem ;/*14px*/
         line-height: 1.375rem;/*22px*/
@@ -61,5 +73,15 @@ $colors: (
         text-underline-offset: 1rem;
         border-color: #DB7A4E;
         text-decoration-color: map-get($colors, cta__text--active);
+        border-bottom: 50px solid white;
+        padding: 0 0 16px;
+        border-bottom-width: 30px;
     }
+
+    footer {
+        font-size: 0.813rem; /*13px*/
+        line-height: 1.125rem;/*18px*/
+    }
+    /*labels and bbuttons
+    text size: 10px | line height 20px | text weight bold 700*/
 }
