--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,6 +1,9 @@
 * {
-  font-family: "Avenir Next";
-  font-size: 16px;
+  font-family: "Avenir";
+}
+
+body {
+  margin: 0px;
 }
 
 .navsection {
@@ -11,8 +14,8 @@
 @media screen and (max-width: 767px) { /*767px*/
   .navsection__title {
     margin: auto;
-    width: 50%;
-    padding: 0.625rem; /*10px*/
+    width: 100%;
+    padding: 0.5rem; /*8px*/
     text-align: center;
   }
   .navsection__menu--container {
@@ -32,6 +35,12 @@
     line-height: 2rem;
     font-weight: 700;
   }
+  h1 {
+    margin: 0%;
+    margin-top: 0%;
+    -webkit-margin-start: 0%;
+            margin-inline-start: 0%;
+  }
   h3 { /*subheader*/
     font-size: 0.875rem; /*14px*/
     line-height: 1.375rem; /*22px*/
@@ -41,4 +50,19 @@
     font-size: 0.813rem; /*13px*/
     line-height: 1.125rem; /*18px*/
   }
+  nav a.active {
+    text-decoration-thickness: 0.3rem; /* 3.2px */
+    text-underline-offset: 1rem;
+    border-color: #DB7A4E;
+    text-decoration-color: #FFFFFF;
+    border-bottom: 50px solid white;
+    padding: 0 0 16px;
+    border-bottom-width: 30px;
+  }
+  footer {
+    font-size: 0.813rem; /*13px*/
+    line-height: 1.125rem; /*18px*/
+  }
+  /*labels and bbuttons
+  text size: 10px | line height 20px | text weight bold 700*/
 }/*# sourceMappingURL=bio.css.map */
