--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Avenir";
+  font-size: 16px;
 }
 
 body {
@@ -25,6 +26,7 @@ body {
   }
   .nav__text--container {
     width: 50vw;
+    padding: 0;
   }
   .nav__text--container h2 {
     font-size: 1.5rem; /*24px*/
@@ -51,13 +53,14 @@ body {
     line-height: 1.125rem; /*18px*/
   }
   nav a.active {
-    text-decoration-thickness: 0.3rem; /* 3.2px */
-    text-underline-offset: 1rem;
-    border-color: #DB7A4E;
-    text-decoration-color: #FFFFFF;
-    border-bottom: 50px solid white;
-    padding: 0 0 16px;
-    border-bottom-width: 30px;
+    text-decoration: none;
+    display: inline-block;
+    border: -1rem solid #323232;
+    padding-bottom: 5%;
+    padding-left: 35%;
+    padding-right: 32%;
+    border-bottom: 0.3rem solid #FFFFFF;
+    color: #FFFFFF;
   }
   footer {
     font-size: 0.813rem; /*13px*/
