--- a/styles/bio.css
+++ b/styles/bio.css
@@ -1,10 +1,10 @@
 * {
-  font-family: "Avenir";
+  font-family: "Avenir Next";
   font-size: 16px;
 }
 
 body {
-  margin: 0px;
+  margin: 0%;
 }
 
 .navsection {
@@ -56,9 +56,8 @@ body {
     text-decoration: none;
     display: inline-block;
     border: -1rem solid #323232;
-    padding-bottom: 5%;
-    padding-left: 35%;
-    padding-right: 32%;
+    padding-left: 39%;
+    padding-right: 39%;
     border-bottom: 0.3rem solid #FFFFFF;
     color: #FFFFFF;
   }
@@ -66,6 +65,50 @@ body {
     font-size: 0.813rem; /*13px*/
     line-height: 1.125rem; /*18px*/
   }
-  /*labels and bbuttons
+  /*labels and buttons
   text size: 10px | line height 20px | text weight bold 700*/
+}
+/* Tablet breakpoint*/
+@media (min-width: 768px) and (max-width: 1280px) {
+  nav {
+    width: 100%;
+  }
+  .navsection {
+    display: flex;
+  }
+  .navsection__title {
+    padding: 24px;
+    justify-content: center;
+    display: inline-block;
+  }
+  .nav__text--container {
+    display: inline-block;
+    padding-left: 1rem; /*16px */
+    padding-right: 3.5rem; /*56px */
+    margin: 0%;
+    justify-content: center;
+    padding-top: 0.5rem;
+  }
+  nav a.active {
+    text-decoration: underline;
+    display: inline-block;
+    text-underline-offset: 1.75rem; /*28px */
+    text-decoration-color: #FFFFFF;
+    text-decoration-thickness: 0.313rem; /*5px */
+    color: #FFFFFF;
+  }
+}
+/* Desktop Breakpoint*/
+@media (min-width: 1280px) {
+  nav {
+    width: 100%;
+  }
+  .navsection {
+    display: flex;
+  }
+  .navsection__title {
+    padding-left: 72px;
+    justify-content: center;
+    display: inline-block;
+  }
 }/*# sourceMappingURL=bio.css.map */
