--- a/styles/bio.css
+++ b/styles/bio.css
@@ -10,9 +10,11 @@ body {
 .navsection {
   background-color: #323232;
   color: #FFFFFF;
+  width: 100vw;
 }
 
-@media screen and (max-width: 767px) { /*767px*/
+/* MOBILE BREAKPOINT */
+@media screen and (min-width: 360px) and (max-width: 767px) { /*767px*/
   .navsection__title {
     margin: auto;
     width: 100%;
@@ -67,9 +69,30 @@ body {
   }
   /*labels and buttons
   text size: 10px | line height 20px | text weight bold 700*/
+  /* HERO SECTION */
+  .hero__section {
+    width: 101vw;
+  }
+  .hero__img--container {
+    position: relative;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  .hero__img--container h1 {
+    position: absolute;
+    top: 50%;
+    left: 23vh;
+    transform: translate(-50%, -50%);
+    font-size: 3.75rem; /* 60px */
+    line-height: 4.25rem; /* 68px */
+    font-weight: 600;
+  }
+  /* HERO SECTION */
 }
+/* MOBILE BREAKPOINT */
 /* Tablet breakpoint*/
 @media (min-width: 768px) and (max-width: 1280px) {
+  /* Navigation*/
   nav {
     width: 100%;
   }
@@ -97,9 +120,28 @@ body {
     text-decoration-thickness: 0.313rem; /*5px */
     color: #FFFFFF;
   }
+  /* Navigation*/
+  /* HERO SECTION */
+  .hero__img--container {
+    position: relative;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  .hero__img--container h1 {
+    position: absolute;
+    top: 50%;
+    left: 23vh;
+    transform: translate(-50%, -50%);
+    font-size: 3.75rem; /* 60px */
+    line-height: 4.25rem; /* 68px */
+    font-weight: 600;
+  }
+  /* HERO SECTION */
 }
-/* Desktop Breakpoint*/
+/*TABLET BREAKPOINT */
+/* DESKTOP BREAKPOINT*/
 @media (min-width: 1280px) {
+  /* Navigation */
   nav {
     width: 100%;
   }
@@ -107,8 +149,40 @@ body {
     display: flex;
   }
   .navsection__title {
-    padding-left: 72px;
+    padding: 32px;
+    margin-left: 120px;
     justify-content: center;
     display: inline-block;
+    margin-right: 40px;
   }
+  .nav__text--container {
+    display: inline-block;
+    padding: 1rem; /*16px */
+    justify-content: center;
+  }
+  nav a.active {
+    text-decoration: underline;
+    display: inline-block;
+    text-underline-offset: 2.25rem; /*36px */
+    text-decoration-color: #FFFFFF;
+    text-decoration-thickness: 0.313rem; /*5px */
+    color: #FFFFFF;
+  }
+  /* Navigation */
+  /* HERO SECTION */
+  .hero__img--container {
+    position: relative;
+    text-align: center;
+    color: #FFFFFF;
+  }
+  .hero__img--container h1 {
+    position: absolute;
+    top: 50%;
+    left: 50vh;
+    transform: translate(-50%, -50%);
+    font-size: 3.75rem; /* 60px */
+    line-height: 2rem;
+    font-weight: 600;
+  }
+  /* HERO SECTION */
 }/*# sourceMappingURL=bio.css.map */
