--- a/styles/bio.css
+++ b/styles/bio.css
@@ -89,6 +89,35 @@ body {
     font-weight: 700;
   }
   /* HERO SECTION */
+  /*ABOUT SECTION */
+  .about__section h1 {
+    color: #323232;
+    font-size: 1.5rem; /* 24px */
+    line-height: 2rem; /* 32px */
+    font-weight: 700;
+  }
+  .about__section {
+    padding: 1rem;
+  }
+  .musician__image--container {
+    padding-top: 1rem;
+  }
+  .about__section--text h3 {
+    font-size: 1.2rem; /*19.2px*/
+    line-height: 1.375rem; /*22px */
+    font-weight: 600;
+  }
+  .about__section--text h4 {
+    font-size: 0.875rem;
+    line-height: 1.375rem; /*22px */
+    font-weight: 600;
+  }
+  .about__section--text p {
+    font-size: 0.813rem; /*12px*/
+    line-height: 1.125rem; /*1 8px */
+    font-weight: 400;
+  }
+  /*ABOUT SECTION */
 }
 /* MOBILE BREAKPOINT */
 /* Tablet breakpoint*/
