--- a/styles/bio.css
+++ b/styles/bio.css
@@ -188,13 +188,48 @@ body {
   .hero__img--container h1 {
     position: absolute;
     top: 50%;
-    left: 23vh;
+    left: 34vh;
     transform: translate(-50%, -50%);
     font-size: 3.75rem; /* 60px */
     line-height: 4.25rem; /* 68px */
     font-weight: 600;
   }
   /* HERO SECTION */
+  /*ABOUT SECTION */
+  .about__section h1 {
+    color: #323232;
+    font-size: 3.75rem; /* 60px */
+    line-height: 4.25rem; /* 32px */
+    font-weight: 700;
+  }
+  .about__section {
+    padding: 3rem;
+  }
+  .musician__image--container {
+    padding-top: 1rem;
+    padding: 3rem;
+  }
+  .about__section--text h3 {
+    font-size: 1.2rem; /*19.2px*/
+    line-height: 1.375rem; /*22px */
+    font-weight: 600;
+  }
+  .about__section--text h4 {
+    font-size: 0.875rem;
+    line-height: 1.375rem; /*22px */
+    font-weight: 600;
+  }
+  .about__section--text p {
+    font-size: 0.813rem; /*12px*/
+    line-height: 1.125rem; /*1 8px */
+    font-weight: 400;
+  }
+  /*ABOUT SECTION */
+  /* Photo Gallery */
+  .gallery__section {
+    background-color: #AFAFAF;
+  }
+  /* Photo Gallery */
 }
 /*TABLET BREAKPOINT */
 /* DESKTOP BREAKPOINT*/
