fix the musician picure in the desktop tab and mob

--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -144,15 +144,15 @@ body {
         padding-top: 1rem;
     }
 
-    .about__section--text h3 {
-        font-size: 1.20rem; /*19.2px*/
+    .about__section--text h3, h2 {
+        font-size: 1.5rem; /*36x*/
         line-height: 1.375rem; /*22px */
         font-weight:600;
     }
 
     .about__section--text h4 {
         font-size: 0.875rem;
-        line-height: 1.375rem; /*22px */
+        line-height: 2rem; /*22px */
         font-weight:600;
     }
 
@@ -176,6 +176,10 @@ body {
 }
 
 /* MOBILE BREAKPOINT */
+
+
+
+/*---------------------------------------------------------------------------------------- */
 
 
 
@@ -259,6 +263,7 @@ body {
         font-size: 3.75rem; /* 60px */
         line-height: 4.25rem; /* 32px */ 
         font-weight: 700;
+        margin: 0;
         
     }
 
@@ -266,27 +271,46 @@ body {
         padding: 3rem;
     }
     .musician__image--container {
-        padding-top: 1rem;
-        padding: 3rem;
+        padding-top: 2.25rem;
+        padding-left: 3rem;
+        padding-right: 3rem;
+
+    }
+
+    .about__section--text h2 {
+        font-size: 2.25rem; /*36px*/
+        line-height: 2.75rem; /*44px */
+        font-weight:700;
+        padding-left: 3rem;
+        padding-right: 3rem;
     }
 
     .about__section--text h3 {
-        font-size: 1.20rem; /*19.2px*/
-        line-height: 1.375rem; /*22px */
+        font-size: 1.5rem; /*24px*/
+        line-height: 2rem; /*32px */
         font-weight:600;
+        margin: 0;
+        padding-left: 3rem; /*36px*/
     }
 
     .about__section--text h4 {
-        font-size: 0.875rem;
-        line-height: 1.375rem; /*22px */
-        font-weight:600;
+        padding-left: 48px;
     }
 
-
     .about__section--text p {
-        font-size: 0.813rem; /*12px*/
-        line-height: 1.125rem; /*1 8px */
+        font-size: 0.875rem; /*14px*/
+        line-height: 1.375rem; /* 22px */
         font-weight: 400;
+    }
+
+    .about__body--container {
+        display: flex;
+        padding-left: 2.25rem; /*36px*/
+        padding-right: 2.25rem; /*36px*/
+    }
+
+    .about__body--paragraph {
+        margin: 1rem;
     }
     /*ABOUT SECTION */
 
@@ -306,7 +330,7 @@ body {
 
 
 
-
+/*----------------------------------------------------------------------------------------*/
 
 
 
@@ -387,6 +411,71 @@ body {
 
 
 
+     /*ABOUT SECTION */
+
+     .about__section h1 {
+        color: map-get($colors, bandSite__black );
+        font-size: 3.75rem; /* 60px */
+        line-height: 4.25rem; /* 32px */ 
+        font-weight: 700;
+        margin: 0;
+        
+    }
+
+    .about__section {
+        padding: 3rem;
+    }
+    
+    .musician__image--container {
+        //padding: 3rem; /*48px*/
+        background-image: url(../assets/Images/band.jpg);
+        width: 100vh;
+        height: 55vh;
+        background-size: cover;
+        margin-right: 0;
+        align-self: center;
+
+    }
+
+    .about__section--text h2 {
+        font-size: 2.25rem; /*36px*/
+        line-height: 2.75rem; /*44px */
+        font-weight:700;
+        padding-left: 3rem;
+        padding-right: 28rem;
+    }
+
+    .about__section--text h3 {
+        font-size: 1.5rem; /*24px*/
+        line-height: 2rem; /*32px */
+        font-weight:600;
+        margin: 0;
+        padding-left: 3rem; /*36px*/
+    }
+
+    .about__section--text h4 {
+        padding-left: 3rem; /* 48px */
+        font-size: 2rem;
+        line-height: 2.75rem; /*44px */
+        margin-bottom: 0;
+    }
+
+    .about__section--text p {
+        font-size: 0.875rem; /*14px*/
+        line-height: 1.375rem; /* 22px */
+        font-weight: 400;
+    }
+
+    .about__body--container {
+        display: flex;
+        padding-left: 2.25rem; /*36px*/
+        padding-right: 2.25rem; /*36px*/
+    }
+
+    .about__body--paragraph {
+        margin: 1rem;
+    }
+    /*ABOUT SECTION */
 
 
 }
