--- a/styles/bio.css
+++ b/styles/bio.css
@@ -112,14 +112,14 @@ body {
   .musician__image--container {
     padding-top: 1rem;
   }
-  .about__section--text h3 {
-    font-size: 1.2rem; /*19.2px*/
+  .about__section--text h3, h2 {
+    font-size: 1.5rem; /*36x*/
     line-height: 1.375rem; /*22px */
     font-weight: 600;
   }
   .about__section--text h4 {
     font-size: 0.875rem;
-    line-height: 1.375rem; /*22px */
+    line-height: 2rem; /*22px */
     font-weight: 600;
   }
   .about__section--text p {
@@ -135,6 +135,7 @@ body {
   /* Photo Gallery */
 }
 /* MOBILE BREAKPOINT */
+/*---------------------------------------------------------------------------------------- */
 /* Tablet breakpoint*/
 @media (min-width: 768px) and (max-width: 1280px) {
   /* Navigation*/
@@ -201,28 +202,45 @@ body {
     font-size: 3.75rem; /* 60px */
     line-height: 4.25rem; /* 32px */
     font-weight: 700;
+    margin: 0;
   }
   .about__section {
     padding: 3rem;
   }
   .musician__image--container {
-    padding-top: 1rem;
-    padding: 3rem;
+    padding-top: 2.25rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
+  }
+  .about__section--text h2 {
+    font-size: 2.25rem; /*36px*/
+    line-height: 2.75rem; /*44px */
+    font-weight: 700;
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
   .about__section--text h3 {
-    font-size: 1.2rem; /*19.2px*/
-    line-height: 1.375rem; /*22px */
+    font-size: 1.5rem; /*24px*/
+    line-height: 2rem; /*32px */
     font-weight: 600;
+    margin: 0;
+    padding-left: 3rem; /*36px*/
   }
   .about__section--text h4 {
-    font-size: 0.875rem;
-    line-height: 1.375rem; /*22px */
-    font-weight: 600;
+    padding-left: 48px;
   }
   .about__section--text p {
-    font-size: 0.813rem; /*12px*/
-    line-height: 1.125rem; /*1 8px */
+    font-size: 0.875rem; /*14px*/
+    line-height: 1.375rem; /* 22px */
     font-weight: 400;
+  }
+  .about__body--container {
+    display: flex;
+    padding-left: 2.25rem; /*36px*/
+    padding-right: 2.25rem; /*36px*/
+  }
+  .about__body--paragraph {
+    margin: 1rem;
   }
   /*ABOUT SECTION */
   /* Photo Gallery */
@@ -232,6 +250,7 @@ body {
   /* Photo Gallery */
 }
 /*TABLET BREAKPOINT */
+/*----------------------------------------------------------------------------------------*/
 /* DESKTOP BREAKPOINT*/
 @media (min-width: 1280px) {
   /* Navigation */
@@ -291,4 +310,57 @@ body {
     font-weight: 600;
   }
   /* HERO SECTION */
+  /*ABOUT SECTION */
+  .about__section h1 {
+    color: #323232;
+    font-size: 3.75rem; /* 60px */
+    line-height: 4.25rem; /* 32px */
+    font-weight: 700;
+    margin: 0;
+  }
+  .about__section {
+    padding: 3rem;
+  }
+  .musician__image--container {
+    background-image: url(../assets/Images/band.jpg);
+    width: 100vh;
+    height: 55vh;
+    background-size: cover;
+    margin-right: 0;
+    align-self: center;
+  }
+  .about__section--text h2 {
+    font-size: 2.25rem; /*36px*/
+    line-height: 2.75rem; /*44px */
+    font-weight: 700;
+    padding-left: 3rem;
+    padding-right: 28rem;
+  }
+  .about__section--text h3 {
+    font-size: 1.5rem; /*24px*/
+    line-height: 2rem; /*32px */
+    font-weight: 600;
+    margin: 0;
+    padding-left: 3rem; /*36px*/
+  }
+  .about__section--text h4 {
+    padding-left: 3rem; /* 48px */
+    font-size: 2rem;
+    line-height: 2.75rem; /*44px */
+    margin-bottom: 0;
+  }
+  .about__section--text p {
+    font-size: 0.875rem; /*14px*/
+    line-height: 1.375rem; /* 22px */
+    font-weight: 400;
+  }
+  .about__body--container {
+    display: flex;
+    padding-left: 2.25rem; /*36px*/
+    padding-right: 2.25rem; /*36px*/
+  }
+  .about__body--paragraph {
+    margin: 1rem;
+  }
+  /*ABOUT SECTION */
 }/*# sourceMappingURL=bio.css.map */
