--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -462,7 +462,6 @@ body {
         font-size: 0.875rem; /*14px*/
         line-height: 2rem; /*32px */
         font-weight:600;
-        margin: 0;
         padding-left: 3rem; /*36px*/
         margin-left: 8rem;
     }
@@ -473,6 +472,7 @@ body {
         line-height: 2.75rem; /*44px */
         margin-bottom: 0;
         margin-left: 8rem;
+        margin-left: 3rem;
     }
 
     .about__section--text p {
