--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -299,24 +299,32 @@ body {
         font-size: 1.5rem; /*24px*/
         line-height: 2rem; /*32px */
         font-weight:600;
-        margin: 0;
         padding-left: 3rem; /*36px*/
+        margin-left: 2rem;
     }
 
     .about__section--text h4 {
-        padding-left: 48px;
+        padding-left: 3rem;
+        margin-left: 
+        2.25rem; /* 2.25 */
+        margin-bottom: 0;
+        font-size: 2.25rem; /* 36px */
+        line-height: 2rem;
+        font-weight:700;
     }
 
     .about__section--text p {
         font-size: 0.875rem; /*14px*/
         line-height: 1.375rem; /* 22px */
         font-weight: 400;
+        margin-left: 1rem;
+        margin-right: 1rem;
     }
 
     .about__body--container {
         display: flex;
-        padding-left: 2.25rem; /*36px*/
-        padding-right: 2.25rem; /*36px*/
+        padding-left: 3rem; /*36px*/
+        padding-right: 3rem; /*36px*/
     }
 
     .about__body--paragraph {
@@ -425,11 +433,11 @@ body {
 
      .about__section h1 {
         color: map-get($colors, bandSite__black );
-        font-size: 3.75rem; /* 60px */
-        line-height: 4.25rem; /* 32px */ 
+        font-size:  2.25rem; /* 60px */
+        line-height: 2.75rem; /* 32px */ 
         font-weight: 700;
-        margin: 0;
-        
+        padding-left: 3rem;
+        margin-left: 4rem;
     }
 
     .about__section {
@@ -444,7 +452,7 @@ body {
         margin-left:auto;
         margin-top: 3rem;
         width: 70%;
-        height: 34.375rem;/* 550px */
+        height: 38.375rem;/* 550px */
 
     }
 
@@ -454,8 +462,9 @@ body {
         font-weight:700;
         padding-left: 3rem;
         padding-right: 3rem;
-        margin-left: 8rem;
-        margin-right: 13rem;
+        margin-left: 10rem;
+        margin-right: 25rem;
+        margin-top: 2rem;
     } 
 
     .about__section--text h3 {
@@ -463,7 +472,7 @@ body {
         line-height: 2rem; /*32px */
         font-weight:600;
         padding-left: 3rem; /*36px*/
-        margin-left: 8rem;
+        margin-left: 10rem;
     }
 
     .about__section--text h4 {
@@ -471,8 +480,7 @@ body {
         font-size: 1.5rem; /* 24px */
         line-height: 2.75rem; /*44px */
         margin-bottom: 0;
-        margin-left: 8rem;
-        margin-left: 3rem;
+        margin-left: 10rem;
     }
 
     .about__section--text p {
@@ -485,8 +493,8 @@ body {
         display: flex;
         padding-left: 2rem; /*36px*/
         padding-right: 3rem; /*36px*/
-        margin-left: 8rem;
-        margin-right: 7rem;
+        margin-left: 10rem;
+        margin-right: 9rem;
     }
 
     .about__body--paragraph {
@@ -495,4 +503,27 @@ body {
     /*ABOUT SECTION */
 
 
+    /* Gallery Section */
+
+    .gallery__section {
+        background-color: map-get($colors, cta__text--col );
+    }
+
+    .gallery__container {
+        display: flex;
+        max-width: 75rem;
+        width: 100%;
+        flex-wrap: wrap;
+        margin-left: auto;
+        margin-right: auto;
+
+    }
+
+    .gallery__container img {
+        width: 18.75rem;
+        height: 12.5rem;
+        padding: 1rem;
+    }
+
+    /*gallery Section */
 }
