--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -140,8 +140,17 @@ body {
     .about__section {
         padding: 1rem;
     }
+    
     .musician__image--container {
-        padding-top: 1rem;
+        display: block;
+        background-image: url(../assets/Images/band.jpg);
+        background-size: cover;
+        margin-right: auto;
+        margin-left:auto;
+        margin-top: 3rem;
+        width: 80%;
+        height: 26.375rem;/* 422px */
+
     }
 
     .about__section--text h3, h2 {
@@ -184,7 +193,7 @@ body {
 
 
 /* Tablet breakpoint*/
-@media (min-width: 768px) and (max-width: 1280px) {
+@media (min-width: 768px) and (max-width: 1279px) {
     /* Navigation*/
     nav {
         width: 100%;
@@ -258,7 +267,7 @@ body {
     
     /*ABOUT SECTION */
 
-    .about__section h1 {
+    .about__section h1, .gallery__title h1 {
         color: map-get($colors, bandSite__black );
         font-size: 3.75rem; /* 60px */
         line-height: 4.25rem; /* 32px */ 
@@ -337,7 +346,37 @@ body {
 
     .gallery__section {
         background-color: map-get($colors, cta__text--col );
+        margin-bottom: 10px;
     }
+
+    .gallery__section {
+        background-color: map-get($colors, cta__text--col );
+        display: grid;
+        place-items: center;
+        padding-left: 4rem;
+    }
+    
+    .gallery__title {
+        padding:3rem;
+        background-color: map-get($colors, cta__text--col );
+    }
+
+    .gallery__container {
+        display: flex;
+        max-width: 90rem;
+        width: 100%;
+        flex-wrap: wrap;
+    }
+
+    .gallery__container img {
+        width: 14rem;
+        height: 9.5rem;
+        padding: 1rem;
+    }
+
+    /*gallery Section */
+
+
 
     /* Photo Gallery */
 
@@ -431,7 +470,7 @@ body {
 
      /*ABOUT SECTION */
 
-     .about__section h1 {
+     .about__section h1, .gallery__title h1 {
         color: map-get($colors, bandSite__black );
         font-size:  2.25rem; /* 60px */
         line-height: 2.75rem; /* 32px */ 
@@ -451,8 +490,8 @@ body {
         margin-right: auto;
         margin-left:auto;
         margin-top: 3rem;
-        width: 70%;
-        height: 38.375rem;/* 550px */
+        width: 68vw;
+        height: 60vh/* 550px */
 
     }
 
@@ -460,10 +499,10 @@ body {
         font-size: 1.5rem; /*24px*/
         line-height: 2rem; /*32px */
         font-weight:700;
-        padding-left: 3rem;
-        padding-right: 3rem;
-        margin-left: 10rem;
-        margin-right: 25rem;
+        padding-left: 2.5vw;
+        padding-right: 2.5vw;
+        margin-left: 9.5vw;
+        margin-right: 28vw;
         margin-top: 2rem;
     } 
 
@@ -471,8 +510,8 @@ body {
         font-size: 0.875rem; /*14px*/
         line-height: 2rem; /*32px */
         font-weight:600;
-        padding-left: 3rem; /*36px*/
-        margin-left: 10rem;
+        padding-left: 2.5vw; /*36px*/
+        margin-left: 9vw;
     }
 
     .about__section--text h4 {
@@ -507,6 +546,14 @@ body {
 
     .gallery__section {
         background-color: map-get($colors, cta__text--col );
+        display: grid;
+        place-items: center;
+       
+    }
+    
+    .gallery__title {
+        padding:3rem;
+        background-color: map-get($colors, cta__text--col );
     }
 
     .gallery__container {
@@ -514,13 +561,10 @@ body {
         max-width: 75rem;
         width: 100%;
         flex-wrap: wrap;
-        margin-left: auto;
-        margin-right: auto;
-
     }
 
     .gallery__container img {
-        width: 18.75rem;
+        width: 23rem;
         height: 12.5rem;
         padding: 1rem;
     }
