--- a/styles/bio.css
+++ b/styles/bio.css
@@ -48,7 +48,7 @@ body {
   h3 { /*subheader*/
     font-size: 0.875rem; /*14px*/
     line-height: 1.375rem; /*22px*/
-    font-weight: Demi 600;
+    font-weight: 600;
   }
   body p {
     font-size: 0.813rem; /*13px*/
@@ -92,7 +92,7 @@ body {
   .hero__img--container h1 {
     position: absolute;
     top: 50%;
-    left: 12vh;
+    left: 17vh;
     transform: translate(-50%, -50%);
     font-size: 1.5rem; /* 24px */
     line-height: 2rem; /* 32px */
@@ -105,6 +105,7 @@ body {
     font-size: 1.5rem; /* 24px */
     line-height: 2rem; /* 32px */
     font-weight: 700;
+    padding-bottom: 1rem;
   }
   .about__section {
     padding: 1rem;
@@ -115,12 +116,11 @@ body {
     background-size: cover;
     margin-right: auto;
     margin-left: auto;
-    margin-top: 3rem;
-    width: 90%;
-    height: 26.375rem; /* 422px */
+    width: 100%;
+    height: 14.375rem; /* 422px */
   }
   .about__section--text h3, h2 {
-    font-size: 1.5rem; /*36x*/
+    font-size: 0.875em; /*36x*/
     line-height: 1.375rem; /*22px */
     font-weight: 600;
   }
@@ -137,28 +137,31 @@ body {
   /*ABOUT SECTION */
   /* Photo Gallery */
   .gallery__section {
+    display: flex;
     background-color: #AFAFAF;
-    display: grid;
-    place-items: center;
+    justify-content: center;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+    padding-bottom: 1.5rem;
   }
   .gallery__title {
     padding: 3rem;
     background-color: #AFAFAF;
-    border: none;
   }
   .gallery__container {
     display: flex;
-    max-width: 30rem;
+    max-width: 75rem;
     width: 100%;
     flex-wrap: wrap;
-    border: none;
-    padding-right: 3rem;
-    padding-left: 3rem;
+    justify-content: space-evenly;
+    gap: 1rem;
   }
   .gallery__container img {
-    width: 23rem;
-    height: 15rem;
-    padding: 1rem;
+    width: 21rem;
+    height: 12.5rem;
+  }
+  .img__container {
+    display: inline-block;
   }
   /* Photo Gallery */
   /* Footer Section */
@@ -167,6 +170,10 @@ body {
   }
   .footer__section h1 {
     color: #FFFFFF;
+    font-size: 1.5rem; /*24px */
+    line-height: 2rem;
+    font-weight: 700;
+    padding: 1.5rem;
   }
   /* Footer Section */
 }
@@ -278,8 +285,8 @@ body {
     font-weight: 700;
   }
   .about__section--text p {
-    font-size: 0.875rem; /*14px*/
-    line-height: 1.375rem; /* 22px */
+    font-size: 1.5rem; /*14px*/
+    line-height: 2rem; /* 22px */
     font-weight: 400;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -295,14 +302,9 @@ body {
   /*ABOUT SECTION */
   /* Photo Gallery */
   .gallery__section {
+    display: flex;
     background-color: #AFAFAF;
-    margin-bottom: 10px;
-  }
-  .gallery__section {
-    background-color: #AFAFAF;
-    display: grid;
-    place-items: center;
-    padding-left: 4rem;
+    justify-content: center;
   }
   .gallery__title {
     padding: 3rem;
@@ -310,14 +312,18 @@ body {
   }
   .gallery__container {
     display: flex;
-    max-width: 90rem;
+    max-width: 75rem;
     width: 100%;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 1rem;
   }
   .gallery__container img {
-    width: 14rem;
-    height: 9.5rem;
-    padding: 1rem;
+    width: 22rem;
+    height: 12.5rem;
+  }
+  .img__container {
+    display: inline-block;
   }
   /*gallery Section */
   /* Photo Gallery */
@@ -447,9 +453,9 @@ body {
   /*ABOUT SECTION */
   /* Gallery Section */
   .gallery__section {
+    display: flex;
     background-color: #AFAFAF;
-    display: grid;
-    place-items: center;
+    justify-content: center;
   }
   .gallery__title {
     padding: 3rem;
@@ -460,11 +466,17 @@ body {
     max-width: 75rem;
     width: 100%;
     flex-wrap: wrap;
+    justify-content: space-evenly;
+    gap: 1rem;
   }
   .gallery__container img {
     width: 23rem;
     height: 12.5rem;
-    padding: 1rem;
+  }
+  .img__container {
+    display: inline-block;
+    width: 23rem;
+    height: 12.5rem;
   }
   /*gallery Section */
 }/*# sourceMappingURL=bio.css.map */
