--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -65,7 +65,7 @@ body {
     h3 {/*subheader*/
         font-size: 0.875rem ;/*14px*/
         line-height: 1.375rem;/*22px*/
-        font-weight: Demi 600;
+        font-weight: 600;
     }
     body p {
         font-size: 0.813rem; /*13px*/
@@ -117,7 +117,7 @@ body {
     .hero__img--container h1 {
         position: absolute;
         top: 50%;
-        left: 12vh;
+        left: 17vh;
         transform: translate(-50%, -50%);
         font-size: 1.5rem; /* 24px */
         line-height: 2rem; /* 32px */ 
@@ -134,6 +134,7 @@ body {
         font-size: 1.5rem; /* 24px */
         line-height: 2rem; /* 32px */ 
         font-weight: 700;
+        padding-bottom: 1rem;
         
     }
 
@@ -147,14 +148,13 @@ body {
         background-size: cover;
         margin-right: auto;
         margin-left:auto;
-        margin-top: 3rem;
-        width: 90%;
-        height: 26.375rem;/* 422px */
+        width: 100%;
+        height: 14.375rem;/* 422px */
 
     }
 
     .about__section--text h3, h2 {
-        font-size: 1.5rem; /*36x*/
+        font-size: .875em; /*36x*/
         line-height: 1.375rem; /*22px */
         font-weight:600;
     }
@@ -178,32 +178,39 @@ body {
 
 
     .gallery__section {
+        display: flex;
         background-color: map-get($colors, cta__text--col );
-        display: grid;
-        place-items: center;
-
+        justify-content: center;
+        padding-left: 1.5rem;
+        padding-right: 1.5rem;
+        padding-bottom: 1.5rem;
+       // place-items: center;
+       
     }
     
     .gallery__title {
         padding:3rem;
         background-color: map-get($colors, cta__text--col );
-        border: none;
     }
 
     .gallery__container {
         display: flex;
-        max-width: 30rem;
+        max-width: 75rem;
         width: 100%;
         flex-wrap: wrap;
-        border: none;
-        padding-right: 3rem;
-        padding-left: 3rem;
+        justify-content: space-evenly;
+        gap: 1rem;
     }
 
     .gallery__container img {
-        width: 23rem;
-        height: 15rem;
-        padding: 1rem;
+        width: 21rem;
+        height: 12.5rem;
+    }
+
+
+    .img__container {
+        display: inline-block;
+
     }
 
     /* Photo Gallery */
@@ -216,6 +223,10 @@ body {
 
     .footer__section h1 {
         color:#FFFFFF;
+        font-size: 1.5rem; /*24px */
+        line-height: 2rem;
+        font-weight: 700;
+        padding: 1.5rem;
 
     }
 
@@ -362,8 +373,8 @@ body {
     }
 
     .about__section--text p {
-        font-size: 0.875rem; /*14px*/
-        line-height: 1.375rem; /* 22px */
+        font-size: 1.5rem; /*14px*/
+        line-height: 2rem; /* 22px */
         font-weight: 400;
         margin-left: 1rem;
         margin-right: 1rem;
@@ -384,15 +395,11 @@ body {
     /* Photo Gallery */
 
     .gallery__section {
+        display: flex;
         background-color: map-get($colors, cta__text--col );
-        margin-bottom: 10px;
-    }
-
-    .gallery__section {
-        background-color: map-get($colors, cta__text--col );
-        display: grid;
-        place-items: center;
-        padding-left: 4rem;
+        justify-content: center;
+       // place-items: center;
+       
     }
     
     .gallery__title {
@@ -402,15 +409,22 @@ body {
 
     .gallery__container {
         display: flex;
-        max-width: 90rem;
+        max-width: 75rem;
         width: 100%;
         flex-wrap: wrap;
+        justify-content: space-evenly;
+        gap: 1rem;
     }
 
     .gallery__container img {
-        width: 14rem;
-        height: 9.5rem;
-        padding: 1rem;
+        width: 22rem;
+        height: 12.5rem;
+    }
+
+
+    .img__container {
+        display: inline-block;
+
     }
 
     /*gallery Section */
@@ -584,9 +598,10 @@ body {
     /* Gallery Section */
 
     .gallery__section {
+        display: flex;
         background-color: map-get($colors, cta__text--col );
-        display: grid;
-        place-items: center;
+        justify-content: center;
+       // place-items: center;
        
     }
     
@@ -600,13 +615,20 @@ body {
         max-width: 75rem;
         width: 100%;
         flex-wrap: wrap;
+        justify-content: space-evenly;
+        gap: 1rem;
     }
 
     .gallery__container img {
         width: 23rem;
         height: 12.5rem;
-        padding: 1rem;
     }
 
+
+    .img__container {
+        display: inline-block;
+        width: 23rem;
+        height: 12.5rem;
+    }
     /*gallery Section */
 }
