--- a/styles/bio.css
+++ b/styles/bio.css
@@ -4,7 +4,7 @@
 }
 
 body {
-  margin: 0%;
+  margin: 0;
 }
 
 .navsection {
@@ -334,6 +334,8 @@ body {
     display: flex;
     background-color: #AFAFAF;
     justify-content: center;
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
   .gallery__title {
     padding: 3rem;
@@ -341,21 +343,29 @@ body {
   }
   .gallery__container {
     display: flex;
-    max-width: 75rem;
+    max-width: 16rem;
     width: 100%;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    gap: 1rem;
+    gap: 0.25rem;
   }
   .gallery__container img {
-    width: 22rem;
-    height: 12.5rem;
+    width: 18rem;
+    height: 10rem;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -o-object-position: bottom;
+       object-position: bottom;
   }
   .img__container {
     display: inline-block;
   }
   /*gallery Section */
-  /* Photo Gallery */
+  /* Footer Section */
+  .footer__container {
+    display: flex;
+  }
+  /*Footer Section */
 }
 /*TABLET BREAKPOINT */
 /*----------------------------------------------------------------------------------------*/
