--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -12,6 +12,7 @@ $colors: (
 * {
     font-family: 'Avenir Next', sans-serif;
     font-size: 16px;
+    margin: 0;
 }
 
 body {
@@ -461,30 +462,25 @@ body {
     }
     
     .gallery__title {
-        padding:3rem;
+        padding: 3rem;
         background-color: map-get($colors, cta__text--col );
+        margin: 0;
     }
 
     .gallery__container {
         display: flex;
-        max-width: 16rem;
+        max-width: 80rem;
         width: 100%;
         flex-wrap: wrap;
         justify-content: space-evenly;
-        gap: .25rem;
+        gap: 1.25rem;
     }
 
     .gallery__container img {
-        width: 18rem;
-        height: 10rem;
+        width: 16rem;
+        height: 11rem;
         object-fit: cover;
         object-position:bottom;
-    }
-
-
-    .img__container {
-        display: inline-block;
-
     }
 
     /*gallery Section */
