--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -8,15 +8,21 @@ $colors: (
 
 );
 
+@font-face {
+    font-family: ;
+    src: url();
+}
 
 * {
     font-family: 'Avenir Next', sans-serif;
     font-size: 16px;
-    margin: 0;
 }
+
 
 body {
     margin: 0;
+    padding: 0;
+    border: none;
 }
 
 .navsection {
@@ -301,7 +307,7 @@ body {
 
 
 /* Tablet breakpoint*/
-@media (min-width: 768px) and (max-width: 1279px) {
+@media screen and (min-width: 768px) and (max-width: 1279px) {
     /* Navigation*/
     nav {
         width: 100%;
@@ -491,8 +497,34 @@ body {
 
     .footer__container {
         display: flex;
+        width: 100%;
+        background-color: map-get($colors, bandSite__black );
+        padding-left: 1.5rem;
+        padding-bottom: 1rem;
+        flex-wrap: wrap;
+        justify-content: flex-start;
     }
 
+    .footer__container h1 {
+        color: #FFFFFF;
+        font-size: 2.25rem; /*60px*/
+        line-height: 2.75rem; /*44px */
+        font-weight:700;
+        padding: 3rem;
+        margin-right: 2rem;
+        margin-left: 2rem;
+    }
+
+    .footer__socialicons { 
+        display: flex;
+        gap: 1rem;
+        padding: 1.5rem;
+    }
+
+    .footer__socialicons img {
+        width: 2rem;
+        height: 2rem;
+    }
 
 
     /*Footer Section */
